fix more style on mobile for cards and hero height

--- a/src/styles/talks/_talks.scss
+++ b/src/styles/talks/_talks.scss
@@ -46,26 +46,18 @@
   @media (max-width: 767px) {
     display: none;
   }
+}
 
-  .mobile-talks {
-    > * {
-      width: 85vw;
-      height: 18rem;
-      margin: 1.5rem auto;
-      p {
-        margin-bottom: 0.4rem;
-      }
-    }
-    @media (min-width: 767px) {
-      display: none;
+.mobile-talks {
+  > * {
+    width: 85vw;
+    height: 18rem;
+    margin: 1.5rem auto;
+    p {
+      margin-bottom: 0.4rem;
     }
   }
-
-  .more-talks-button {
-    position: absolute;
-    left: 33%;
-    @media (min-width: 767px) {
-      display: none;
-    }
+  @media (min-width: 767px) {
+    display: none;
   }
 }
